# pando-bridge

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  run.example.py
.github/workflows/: test.yml
examples/: import_md.py  memory_stub.py
pando/: __init__.py  memory_provider.py  permission_mcp.py  server.py
pando/plugins/: memory.py
pando/providers/: __init__.py  http.py  null.py
static/: index.html  manifest.json  sw.js
static/themes/_smoke/: theme.css
tests/: test_archive_toggle.py  test_attachment_injection.py  test_attachments.py  test_effort_whitelist.py  test_frontend_plugins.py  test_hooks.py  test_import_md.py  test_memory_auto_enable.py  test_memory_stub_admin.py  test_memory_stub_contract.py  test_memory_stub_persistence.py  test_permission_broker.py  test_permission_mcp.py  test_permission_wiring.py  test_plugin_loader.py  test_reconnect_resume.py  test_stop_response.py  test_stream_output.py  test_theme_asset.py  test_tool_policy.py  test_tool_policy_always.py  test_tool_policy_api.py  test_usage_quota.py  test_usage_stats.py
tests/fixtures/: hook_plugins.py
